# extrovert

./: .replit  Pasted--rest-express-1-0-0-dev-tsx-watch-clear-screen-false-exclude-vite-config-ts-server-index-1733018559718.txt  Pasted--rest-express-1-0-0-dev-tsx-watch-clear-screen-false-exclude-vite-config-ts-server-index-t-1732678974429.txt  Pasted--rest-express-1-0-0-dev-tsx-watch-clear-screen-false-exclude-vite-config-ts-server-index-t-1732730972008.txt  Pasted--rest-express-1-0-0-dev-tsx-watch-clear-screen-false-exclude-vite-config-ts-server-index-t-1732776634282.txt  Pasted--rest-express-1-0-0-dev-tsx-watch-clear-screen-false-exclude-vite-config-ts-server-index-t-1732855628118.txt  Pasted--rest-express-1-0-0-dev-tsx-watch-clear-screen-false-exclude-vite-config-ts-server-index-t-1732935964324.txt  Pasted--rest-express-1-0-0-dev-tsx-watch-clear-screen-false-exclude-vite-config-ts-server-index-t-1732936250120.txt  Pasted--rest-express-1-0-0-dev-tsx-watch-clear-screen-false-exclude-vite-config-ts-server-index-t-1732936790169.txt  Pasted--rest-express-1-0-0-dev-tsx-watch-clear-screen-false-exclude-vite-config-ts-server-index-t-1732938481133.txt  Pasted--rest-express-1-0-0-dev-tsx-watch-clear-screen-false-exclude-vite-config-ts-server-index-t-1733162926843.txt  Pasted--rest-express-1-0-0-dev-tsx-watch-clear-screen-false-exclude-vite-config-ts-server-index-ts-1732722506999.txt  Pasted--usr-bin-env-python-from-typing-import-Dict-import-os-from-crewai-import-Agent-Crew-Task-fro-1733111373923.txt  package-lock.json  package.json  pyproject.toml  replit.nix  theme.json  (+16 more)
(+55 files in other folders)
