[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "crewai-tools>=0.14.0",
    "crewai>=0.83.0",
    "langchain>=0.3.8",
    "openai>=1.55.1",
    "pytrends>=4.9.2",
    "requests>=2.32.3",
    "aiohttp>=3.11.7",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "beautifulsoup4>=4.12.3",
    "anthropic>=0.40.0",
    "duckduckgo-search>=6.3.7",
]
